--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -1,4 +1,12 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539220.md#1" target="_blank">叶剑英之子叶选平追悼仪式现场事先曝光</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539220.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/7e39ab81b6e2c10aed9a2f09b26077a4-150x120.png" align ="left"></a>9月23日中共已古的元老叶剑英的长子、中共全国政协副主席、前广东省省长叶选平追悼会将于9月23日在广州殡仪馆举行，大纪元事先获得追悼会现场视频，显示中共各派都有送花圈。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 3:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538985.md#1" target="_blank">中共进行第3次阅兵彩排 北京进入临战状态</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538985.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/09/1509082158042039-150x120.jpg" align ="left"></a>中共十一大阅兵逼近之际，大陆各地陆续进入“临战”状态，而作为首都的北京更是风声鹤唳、草木皆兵。法媒批到，中共对北京的管制，如同法西斯式的管理方式。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 2:34 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539142.md#1" target="_blank">湖南货车冲入集市碾人 数十人死伤（慎入）</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539142.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1-27-150x120.jpg" align ="left"></a>9月22日，湖南省湘潭市一辆货车撞上赶集人群，目前已致10人死亡、16人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 2:23 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539182.md#1" target="_blank">中国游客犹他州出车祸 4遇难者来自上海</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539182.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-589477624-150x120.jpg" align ="left"></a>上周五，一组中国游客搭乘的大巴在美国犹他州发生重大车祸，造成4人遇难。周六（9月22日），当局确定四名遇难者的身份，均来自上海。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 1:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539034.md#1" target="_blank">共享单车衰落后 大陆自行车厂挣扎求生</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539034.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/VCG111100263731-150x120.jpg" align ="left"></a>近日，身系千万人押金的ofo共享单车，已悄悄搬离了其“发迹之地”北京中关村。随着共享单车的衰落，令自行车供应商跌落谷底，现在幸存的厂家在挣扎求生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 1:24 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538883.md#1" target="_blank">欧洲移植大会 中共掠夺器官再成焦点</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538883.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1-2-150x120.jpeg" align ="left"></a>2019年9月15至18日，欧洲器官移植国际会议在丹麦首都哥本哈根举行。在此次大会上，中共的器官滥用行为和活摘话题再次引起业界专家的关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 12:48 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539025.md#1" target="_blank">网传：退伍军人将在“十一”北京维权</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539025.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/89fa644913a515970f02fd82fc4770f5-150x120.jpg" align ="left"></a>近日，有多方消息称，退伍军人将在“十一”维权，联合现役军人齐聚北京，并呼吁所有维权群体能够一起上街，推翻中共政权！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 12:28 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538913.md#1" target="_blank">十一前夕 东莞市幼儿园168名幼儿食物中毒</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538913.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/11/GettyImages-878271178-150x120.jpg" align ="left"></a>在中共当局加大“维稳”力度为迎接“十一”大阅兵的前夕，广东省东莞市发生一起重大的幼儿园食品安全事故。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 11:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538406.md#1" target="_blank">经营艰难 大陆多家房企分拆物业上市</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538406.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/1411010353442663-600x400-150x120.jpg" align ="left"></a>保利地产全资子公司保利物业发展股份有限公司（保利物业）9月17日发布公告称，已收到中共证监会核准境外上市的批复，证监会核准保利物业发行不超过1.53亿股境外上市外资股。保利物业已于8月6日向港交所递交上市申请。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 10:57 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538147.md#1" target="_blank">【更新中】9.22港人抗议 多个港铁站关闭</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538147.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1909220450202188-150x120.jpg" align ="left"></a>反修订《逃犯条例》风波已持续超过100日，有网民发起机场“和你塞4.0”行动，到香港国际机场作“交通压力测试”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 10:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11537944.md#1" target="_blank">【翻墙必看】港人智慧抗争 创意菜表诉求</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11537944.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/190825113420100615-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
@@ -30,16 +38,8 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537741.md#1" target="_blank">专家：中国经济面临三重风险 贸易战只是其一</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537741.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/11/1b4b324423b9f47e62cff9d9046e359a-150x120.jpg" align ="left"></a>中共的经济数据正降至几十年来的最低水平。第二季度的经济增长率为6.2% ，为官方开始公布季度数据以来的最低水平。第三季度的数据初步估计是6% 到6.5%，也是有史以来的最低预测。很多人将之归因于贸易战，但据专家分析，中共的经济面临着“三重威胁” ，而贸易战只是其中的一部分。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 8:18 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537801.md#1" target="_blank">中共热捧“最美贫困户” 愚弄穷人惹众怒</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537801.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/6fea4c65ly1g764lwn81jj20qn0k0e81-150x120.jpg" align ="left"></a>中共当局近年高调宣传的“扶贫”项目，备受舆论诟病。近期官方推出的“最美贫困户”等一系列荣誉称号，再次将中共“扶贫”腐败乱象推上风口浪尖。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 7:47 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537058.md#1" target="_blank">曼哈顿明慧学校第一堂课 专家谈奉茶典礼</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537058.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/e21305dbd7c7f57c162e0a0034aaa27d-600x400-1-150x120.jpg" align ="left"></a>9月15日，位于曼哈顿华埠市中心坚尼路的明慧学校周末班正式开课。老师授课之前，一场传统的奉茶敬师仪式引发家长围观和思考，成为明慧学校曼哈顿分校的第一堂课。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 7:41 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537311.md#1" target="_blank">“六四天网”公民记者王晶出狱 脑癌恶化</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537311.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/image-2-150x120.jpg" align ="left"></a>“六四天网”公民记者王晶，于9月15日刑满出狱，长春当局维稳人员强迫其签署训诫书。王晶被关押期间遭受多次殴打和酷刑，致使其腰椎严重受损，脑癌病情也恶化。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 7:29 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537763.md#1" target="_blank">一天两名13岁港童被捕 逾百市民指骂警察</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537763.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/15c695c11bfa5485_ttl7daydx9_eJo8vBF-150x120.jpg" align ="left"></a>港铁将军澳站附近晚上爆发多宗冲突。警车赶到处理，有两至三名男童疑因藏有观星笔和喊口号，遭警员拘捕并带上警车。逾百多名街坊到场抗议，警方两度射海绵弹及胡椒喷雾驱散市民。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 6:57 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537726.md#1" target="_blank">电动车“拜腾”创始人：因中共干预而离职</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537726.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/2019-IAA-Frankfurt-Auto-Show-Press-Days-GettyImages-1173555519-150x120.jpg" align ="left"></a>电动汽车创业公司“拜腾”（Byton）的创始人和前首席执行官毕福康（Carsten Breitfeld）对外透露说，他之所以在今年早些时候离开公司，是因为中国第一汽车厂对之进行投资之后，中共政府对“拜腾”进行了非常严重的干预。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 6:39 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537789.md#1" target="_blank">恐怖录像曝光 新疆囚犯被黑布蒙眼背铐押送</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537789.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/GettyImages-1152108750-150x120.jpg" align ="left"></a>一段惊悚的无人机拍摄视频曝光，显示中共将数百名中国人押送的场景，这些人双手被戴手铐绑在背后，他们的眼睛用黑布蒙住，还被剃光了头。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 6:39 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537762.md#1" target="_blank">杭州派官员进驻阿里巴巴等百家私企</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537762.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/09/1409130939461944-150x120.jpg" align ="left"></a>近日，中共浙江省杭州市政府将抽调100名官员，进驻阿里巴巴等第一批100家大型私企，作为“政府事务代表”。有网民表示，中共开始吞并私企了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 6:22 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537614.md#1" target="_blank">新iPhone手机上市一天 在中国被抢光</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537614.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/iphone-11-China-150x120.jpg" align ="left"></a>新款苹果iPhone手机似乎在其最重要的海外市场——中国，引起了轰动和消费者的热烈追捧。在这家科技巨头于周四（9月19日）发布了三款新iPhone之后，一些机型已经售罄，其他的消费者需要等上几周才能购买，或者需要从个体销售商那里加价购买。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 4:48 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537202.md#1" target="_blank">【更新】9.21元朗恐袭2个月 港人集会遭清场</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537202.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1169990159-150x120.jpg" align ="left"></a>反送中运动迄今已三个多月，香港民众仍然持续地自发抗争。今天（9月21日）发起屯门公园再光复游行、元朗恐袭两个月静坐，要求港府回应民众的“五大诉求”等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 1:30 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11536555.md#1" target="_blank">十一临近中共疯狂打压 异见人士频失联</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11536555.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/page-3-150x120.jpg" align ="left"></a>距十一还有八天，各地异见人士及维权人士也承受着来自中共当局更严酷的打压，频繁出现被失踪、被失联。其中江苏人权捍御者沈爱斌已被监视居住，遭到强辐射伤害，出现严重的头痛头晕伴有耳鸣，周身无力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 1:09 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537282.md#1" target="_blank">香港现反送中菜单：催泪蛋 五大素球 以眼还眼</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537282.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/c1cc46d81d9eebb9c852f725bd32e4d6-150x120.jpg" align ="left"></a>香港“反送中”运动持续100多天，仍在进行中；港人餐馆老板也创新性地推出“反送中”菜单，包括“五大素球”、“以眼还眼”、“催泪蛋”等新菜色，借此向“香港历史的关键时刻”致敬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 12:20 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537288.md#1" target="_blank">美拟改革国际邮费 中国邮美包裹或受影响</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/21/n11537288.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1401241125362546-600x400-150x120.jpg" align ="left"></a>白宫贸易顾问彼得·纳瓦罗（Peter Navarro）下周将率代表团前往日内瓦，力求改革全球邮政政策协调体系。川普（特朗普）政府多次强调，现有国际邮费政策有利于中国（共），对美国不公平。若改革成功，可能会打击进入美国的假冒商品，同时会使中国寄美包裹涨价。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月22日 12:15 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539281.md#1" target="_blank">外媒：中共打压新疆的政策已在宁夏施行</a><br></h3>继新疆维吾尔族自治区后，宁夏回族自治区似乎也成中共政府打击穆斯林的目标，一名当地伊玛目认为“新疆政策已经在这里施行了，至少正朝这个方向前进中”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 3:58 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538875.md#1" target="_blank">9月初 哈尔滨多名法轮功学员遭绑架</a><br></h3>9月11日，哈尔滨铁路公安局直属公安处绑架了董文秀、王淑兰、王玉荣、宛芳、张海燕等多名法轮功学员。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 1:38 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538408.md#1" target="_blank">湖南大货车冲入集市人群 至少10死16伤</a><br></h3>湖南湘潭市9月22日一早发生严重车祸，一辆货车撞向赶集的人群，多人被卷至车底。截止大纪元发稿，事故造成至少10死16伤。
 
 惨案发生在上午8时40分许，湘潭县内日华村的一个市集，一辆车牌号码为湘A20816的运沙的大货车冲向市集，撞到了多名赶集的行人及大批商贩。目前造成10人死亡，16人受伤，伤者均已送院救治，而涉事司机已经被警方逮捕。
